<resources>
    <string name="app_name">MiLi Pure</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_jump">Immediately begin to experience</string>
    <string name="logining">logining</string>
    <string name="digits_abc_number">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="back">back</string>
    <string name="login_userinfo_not_exist">Login user information does not exist</string>
    <string name="xlistview_header_hint_normal">Drop down</string>
    <string name="xlistview_header_hint_ready">Release refresh data</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Last update time:</string>
    <string name="xlistview_footer_hint_normal">See more</string>
    <string name="xlistview_footer_hint_ready">Release more</string>
    <string name="good_friends">friends</string>
    <string name="no_data">Sorry no data. Please try again later!</string>
    <string name="login">login</string>
    <string name="loginggg">Login...</string>
    <string name="username_empty">User name is empty</string>
    <string name="pwd_empty">Password is empty</string>
    <string name="username_limit">User name length in 16 characters or less oh</string>
    <string name="pwd_length_limit">Password length in the 6-16 characters or less oh</string>
    <string name="hand">hand</string>
    <string name="face">face</string>
    <string name="eye">eye</string>
    <string name="neck">Neck</string>
    <string name="_settings">setting</string>
    <string name="space">" "</string>
    <string name="more">more</string>
    <string name="title">My Bluetooth</string>
    <string name="bundled">bundled device</string>
    <string name="disconnected">disconnecdted device</string>
    <string name="connected">connected</string>
     <string name="disconnect">disconnecdted</string>
    <string name="save">Storage</string>
    <string name="_findpwd">Retrieve password</string>
    <string name="_reg">User registration</string>
    <string name="_getnum">Get verification code</string>
    <string name="_setpwd">Set password</string>
    <string-array name="hand_skin_share">
        <item>Do not think that the face of the skin to the need to scrub, our hands are also a place of old horny accumulation oh! To choose scrub contains protein mixed hand care lotion, massage the back of the hand and palm, protein and scratching particles can help bleaching and deep clean the skin, removing dead skin and promote cell metabolism. </item>
        <item>With a soothing hand repair cream smear on the hand, pay attention to choose products containing vitamins and protein, can help promote cell metabolism and rapid improvement in skin elasticity, make skin soft reply moist.</item>
        <item>Choose more oily moisturizing the skin creams besmear is put on the back of the hand on the knuckles and the rough location, massage gently with finger, can soften rough skin and joint spaces, but also adequate moisture protection. And then blending hand cream and hand massage oil massage hands.</item>
        <item>Coated with the film, with fresh paper, hot towel or cotton gloves wrapped about ten minutes, to help strengthen the skin tissue and deep moisture.</item>
        <item>With 50 grams of sesame oil or salad oil, 30 grams of honey, 1 egg, mix and mix thoroughly, put his hands soak them for about 10 minutes. Then, the hand washing clean, you can get a satisfactory effect of the nourishing. Left hand cream can be packed in glass bottles, placed in the refrigerator, and then soak for 1 times every two days. The 1 week deployment of hand cream, adhere to care for 1 months, your hands will be evident in many lubrication.</item>
        <item>Take 30 grams of olive oil, add a few drops of rose perfume, half a teaspoon of honey and a small amount of purified water, and mix thoroughly into the vial, the daily morning and evening daub on the dorsum of the fingers with both hands and then rub each other to absorb. This method is especially suitable for the skin of the hand skin rough cracked.</item>
        <item>Take half of the filter smashed cucumber juice, cucumber juice, add 1 egg, 1 tablespoon olive oil, stir well. The evening before going to sleep in the back of the hand painted, and then put on gloves, so as not to dirty mattress. The second day early in the morning after getting up, washing your hands clean, painted with hand cream. Hand cream with the hands, the skin immediately becomes smooth and delicate.</item>
        <item>With egg yolk egg white, added to the amount of milk and honey to reconcile evenly deposited in the hands, about 15 minutes to wash hands, wipe again hand cream. Do one of their hands with wrinkle, whitening every week.</item>
        <item>After drinking milk or yogurt, full use of the remaining milk or yogurt, will be left in the bottle of milk to wipe hands, about 15 minutes after the wash your hands with warm water, adhere to the period of time, the hands will be tender and incomparably.</item>
        <item>Apple contains a great benefit to the human body. To do with the film after juicing apple puree, also with calm and soft function, make skin smooth rough hands. The fresh apple mud with water to cook until completely melted, until the cold drops of sesame oil. It a thin coating layer on the back of the hand, you will feel very pleasantly warm, this film for 15 minutes deposited in the hands, will dry to a transparent color, then you can directly torn and then handle with warm water wash net can be.</item>
        <item>The role of disinfection and convergence and taste of strawberry, is a good material for beauty. But it is not easy to store, a little attention will become not fresh. However, no fresh strawberry can also be used to do film, anti-inflammatory and whitening. The strawberry mashed with flour mixed evenly, the best add some honey. Put the strawberries in military uniform film coating, and then wear disposable gloves or plastic wrap, and then set a rubber band, 20 minutes after take off, the same method can also used in nursing on the feet, legs, arms, the effect is the same.</item>
    </string-array>
    <string-array name="the_neck_share">
        <item>Because the neck of the sebaceous glands less, it is easy to appear the phenomenon of dry skin. This time, you can use olive oil directly on the neck, so that the dry skin to get moisture. Prior to the application of olive oil, olive oil should be poured on the palm of the hand to warm, and then from the bottom up, gently smear. </item>
        <item>Neck massage can promote blood circulation, strengthen the neck lymphatic system of detoxification, to prevent the generation of wrinkles. Neck massage is the most commonly used method to improve the skin of the neck. Can take a small amount of essential oil applied to the neck, with the pulp from the clavicle from the place of the first gently press, until the oil is completely absorbed by the neck skin.</item>
        <item>The skin of the neck is easy to loose, to tighten the skin of the neck. Can DIY egg white honey and neck film, prepare an egg, add the right amount of honey and starch, and then stir into a paste. Clean the neck with clean water, evenly spread the neck film on the neck, and then rinse with clean water after 20 minutes. This film is pure natural, and can effectively compact neck skin, you can apply 2 times a week! Effect is very good oh!</item>
        <item>Clean neck skin care is also very important. Because the long-term exposure to the neck, it is inevitable that some bags of pollution, so every day to clean the neck. Every time after going out to come back, remember to use clean water to clean the neck, after washing, but also painted on the neck cream, which can delay the aging of the skin of the neck!</item>
        <item>Appropriate neck movement can also play a role in the maintenance of the neck. Turned up and down around your neck every day to do 20 times this kind of action, can make the neck muscles get full stretch, the activities of the neck can make the neck skin is not prone to wrinkles Oh!</item>
        <item>The maintenance of the neck can also eat some foods rich in nucleic acids, such as fish, shrimp, animal liver, yeast, mushrooms, edible fungus, and pollen. At the same time, eat some high vitamin C content of fresh vegetables or fruit, so as to promote the nucleic acid absorption.</item>
        <item>When using the mask, the first do not hurry to throw it away, because just used in the mask there are a lot of nutrients and not all of the consumption, which is to be used as a film mask to use. Put it in the neck and then apply for 5 minutes, not only to the conservation of the neck, but also to fully utilize the remnants of the mask nutrition. To do mask, the head best back.</item>
    </string-array>
    <string name="age">age</string>
    <string name="Mon">Monday</string>
    <string name="Tue">Tuesday</string>
    <string name="Wed">Wednesday</string>
    <string name="Thu">Thursday</string>
    <string name="Fri">Friday</string>
    <string name="Sat">Saturday</string>
    <string name="Sun">Sunday</string>
    <string name="Female">women</string>
    <string name="AverageLevel">Average level</string>
    <string name="nomal">Normal</string>
    <string name="Previousday">The day before</string>
    <string name="testpf">Skin tester</string>
    <string name="testfrom">Source:88888</string>
    <string name="sld">Eye socket</string>
    <string name="gzxjf">Dry skin</string>
    <string name="gzxjf1">Average age population of 41.1%</string>
    <string name="gzxjf2">Compared to the last +0.2%</string>
    <string name="gzxjf3">Skin tester, you deserve it, for more details. Please click www.mymili.com</string>
    <string name="gzxjf5">Normal value of moisture in the spring and Autumn Period</string>
    <string name="gzxjf6">The difference of moisture content in summer is about 3%</string>
    <string name="gzxjf7">Winter water ratio is about 5%</string>
    <string name="gzxjf8">Eye\n35%-45%</string>
    <string name="gzxjf9">Face\n32%-42%</string>
    <string name="gzxjf10">Hand\n30%-38%</string>
    <string name="gzxjf11">Neck\n35%-45%</string>
    <string name="pfzk">Skin condition</string>
    <string name="yhm">username</string>
    <string name="jl">Distance</string>
    <string name="hddz">Activity address</string>
</resources>