<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aknow_of_water"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top|center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/onlysv"
        style="@style/m_w" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/twenty_dp" >

            <TextView
                style="@style/normalText"
                android:text="@string/gzxjf5" />

            <TextView
                style="@style/normalText"
                android:text="@string/gzxjf6" />

            <TextView
                style="@style/normalText"
                android:text="@string/gzxjf7" />

            <RelativeLayout style="@style/m_w" >

                <ImageView
                    style="@style/w_w"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/face" />

                <TextView
                    style="@style/normalText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/gzxjf8" />

                <TextView
                    style="@style/normalText"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/gzxjf9" />

                <TextView
                    style="@style/normalText"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:text="@string/gzxjf10" />

                <TextView
                    style="@style/normalText"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/gzxjf11" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>