<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextViewFriendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yhm" />

        <TextView
            android:id="@+id/TextViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age" />

        <TextView
            android:id="@+id/TextViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jl" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextViewActivityAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hddz" />

</LinearLayout>