<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/include_fragment_navigation_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/dp_16" >

        <LinearLayout
            style="@style/m_w"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testpf"
                android:textColor="@color/black_555555"
                android:textSize="@dimen/list_text_size_1" />

            <RelativeLayout
                style="@style/m_w"
                android:layout_marginTop="@dimen/ten_dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/testfrom"
                    android:textColor="@color/black_555555"
                    android:textSize="@dimen/input_size" />

                <TextView
                    android:id="@+id/tvRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="2015-2-1"
                    android:textColor="@color/black_555555"
                    android:textSize="@dimen/input_size" />
            </RelativeLayout>

            <LinearLayout
                style="@style/m_w"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@drawable/bg_round_corner_black"
                android:orientation="vertical" >

                <LinearLayout
                    style="@style/m_w"
                    android:orientation="horizontal" >

                    <com.mygame.pure.view.CircleImageView
                        android:layout_width="@dimen/forty_dp"
                        android:layout_height="@dimen/forty_dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/ten_dp"
                        android:layout_marginLeft="@dimen/five_dp"
                        android:src="@drawable/smiling_face" />

                    <TextView
                        style="@style/styleText1"
                        android:text="艾薇儿" />

                    <View style="@style/styleOfHalfTransLine" />

                    <TextView
                        style="@style/styleText1"
                        android:text="@string/Female" />

                    <View style="@style/styleOfHalfTransLine" />

                    <TextView
                        style="@style/styleText1"
                        android:text="@string/sld" />

                    <View style="@style/styleOfHalfTransLine" />

                    <TextView
                        style="@style/styleText1"
                        android:text="@string/gzxjf" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:layout_marginRight="@dimen/ten_dp"
                    android:src="@drawable/icon_vertical_pb" />

                <LinearLayout
                    style="@style/m_w"
                    android:layout_marginBottom="@dimen/one_hundred_dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/styleText1"
                        android:text="@string/gzxjf1"
                        android:textColor="@color/theme_blue" />

                    <TextView
                        style="@style/styleText1"
                        android:text="@string/gzxjf2"
                        android:textColor="@color/theme_blue" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/w_w"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp"
                android:text="@string/gzxjf3"
                android:textColor="@color/black_555555" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>