<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="top|center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="19dp"
        android:text="2015-06-20"
        android:textColor="@color/theme_blue"
        android:textSize="@dimen/activity_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            style="@style/w_0_weight_1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvJzzk"
                style="@style/styleCenterText"
                android:text="@string/pfzk" />

            <TextView
                android:id="@+id/tvJzzkData"
                style="@style/styleCenterText"
                android:layout_marginBottom="34dp"
                android:layout_marginTop="10dp"
                android:text="@string/nomal"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            style="@style/w_0_weight_1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvAverageLevel"
                style="@style/styleCenterText"
                android:text="@string/AverageLevel" />

            <TextView
                android:id="@+id/tvAverageLevelData"
                style="@style/styleCenterText"
                android:layout_marginBottom="34dp"
                android:layout_marginTop="10dp"
                android:text="0.0%"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            style="@style/w_0_weight_1"
            android:layout_marginBottom="34dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvThanLastDay"
                style="@style/styleCenterText"
                android:text="@string/Previousday" />

            <TextView
                android:id="@+id/tvThanLastDayData"
                style="@style/styleCenterText"
                android:layout_marginTop="10dp"
                android:text="0.0%"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>