<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/include_navigation_bar" />

    <RelativeLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Sun"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Mon"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Tue"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/item4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Wed"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Thu"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/item6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Fri"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/item7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/Sat"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="false" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

</LinearLayout>